@@ -123,10 +123,8 @@ public class ColumnVisibilityContextMenu {
                     getTableViewTopComponent().getCurrentGraph(),
                     getTableViewTopComponent().getCurrentState(),
                     extractColumnAttributes(table.getColumnIndex().stream()
-                            .filter(column -> Character.isUpperCase(
-                            column.getAttribute().getName().charAt(0))
-                            )
-                            .collect(Collectors.toList())),
+                            .filter(column -> Character.isUpperCase(column.getAttribute().getName().charAt(0)))
+                            .toList()),
                     UpdateMethod.REPLACE
             );
             e.consume();
@@ -135,8 +133,7 @@ public class ColumnVisibilityContextMenu {
         showPrimaryColumnsMenu = createCustomMenu(KEY_COLUMNS, e -> {
             if (getTableViewTopComponent().getCurrentGraph() != null) {
                 final Set<GraphAttribute> keyAttributes = new HashSet<>();
-                final ReadableGraph readableGraph = getTableViewTopComponent().getCurrentGraph().getReadableGraph();
-                try {
+                try (final ReadableGraph readableGraph = getTableViewTopComponent().getCurrentGraph().getReadableGraph()) {
                     final int[] vertexKeys = readableGraph.getPrimaryKey(GraphElementType.VERTEX);
                     for (final int vertexKey : vertexKeys) {
                         keyAttributes.add(new GraphAttribute(readableGraph, vertexKey));
@@ -145,8 +142,6 @@ public class ColumnVisibilityContextMenu {
                     for (final int transactionKey : transactionKeys) {
                         keyAttributes.add(new GraphAttribute(readableGraph, transactionKey));
                     }
-                } finally {
-                    readableGraph.release();
                 }
                 getActiveTableReference().updateVisibleColumns(
                         getTableViewTopComponent().getCurrentGraph(),
@@ -154,9 +149,8 @@ public class ColumnVisibilityContextMenu {
                         extractColumnAttributes(
                                 table.getColumnIndex().stream()
                                         .filter(column -> keyAttributes.stream()
-                                        .anyMatch(keyAttribute -> keyAttribute.equals(column.getAttribute()))
-                                        )
-                                        .collect(Collectors.toList())
+                                                .anyMatch(keyAttribute -> keyAttribute.equals(column.getAttribute())))
+                                        .toList()
                         ),
                         UpdateMethod.REPLACE
                 );
@@ -225,6 +219,7 @@ public class ColumnVisibilityContextMenu {
                     default -> {
                         // Do nothing
                     }
+
                 }
             }
         });
@@ -389,8 +384,7 @@ public class ColumnVisibilityContextMenu {
         final CustomMenuItem menuItem = new CustomMenuItem(box);
         menuItem.setHideOnClick(false);
 
-        textField.setOnKeyReleased(
-                new ColumnFilterKeyReleasedEventHandler(columnCheckboxes));
+        textField.setOnKeyReleased(new ColumnFilterKeyReleasedEventHandler(columnCheckboxes));
 
         return menuItem;
     }
@@ -433,12 +427,8 @@ public class ColumnVisibilityContextMenu {
      */
     private List<Tuple<String, Attribute>> extractColumnAttributes(final List<Column> columns) {
         return columns.stream()
-                .map(column
-                        -> Tuple.create(
-                        column.getAttributeNamePrefix(),
-                        column.getAttribute())
-                )
-                .collect(Collectors.toList());
+                .map(column -> Tuple.create(column.getAttributeNamePrefix(), column.getAttribute()))
+                .toList();
     }
 
     /**
@@ -449,8 +439,7 @@ public class ColumnVisibilityContextMenu {
      * @param columnCheckboxes a list of check boxes representing columns to be added to the menu
      * @return the created menu item or null if column check boxes is empty
      */
-    private CustomMenuItem createDynamicColumnMenu(final MenuButton button,
-            final List<CustomMenuItem> columnCheckboxes) {
+    private CustomMenuItem createDynamicColumnMenu(final MenuButton button, final List<CustomMenuItem> columnCheckboxes) {
         if (!columnCheckboxes.isEmpty()) {
             button.getItems().addAll(columnCheckboxes);
 
@@ -470,8 +459,7 @@ public class ColumnVisibilityContextMenu {
      * @param handler the action handler that will be called when the menu item is clicked
      * @return the created menu item
      */
-    private CustomMenuItem createCustomMenu(final String title,
-            final EventHandler<ActionEvent> handler) {
+    private CustomMenuItem createCustomMenu(final String title, final EventHandler<ActionEvent> handler) {
         final CustomMenuItem menuItem = new CustomMenuItem(new Label(title));
 
         menuItem.setHideOnClick(false);
@@ -502,7 +490,7 @@ public class ColumnVisibilityContextMenu {
      * A key event handler that deals with a user typing in a column filter field. Based on the filter text, the handler
      * will hide and show the columns it searches across.
      */
-    class ColumnFilterKeyReleasedEventHandler implements EventHandler<KeyEvent> {
+    private class ColumnFilterKeyReleasedEventHandler implements EventHandler<KeyEvent> {
 
         private final List<CustomMenuItem> columnCheckboxes;
 
